updated index file

--- a/homework-02/index.html
+++ b/homework-02/index.html
@@ -22,11 +22,6 @@
    <!-- <div class="container">  -->
     <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="#">Nikki Triplett</a>
-      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -37,29 +32,14 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div> 
-          </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>        </ul> -->
-        <!-- <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
       </div>
     </nav>
   </div>
 <!-- <div class="container"> -->
   <section>
+    <div class="container">
+      <div class="row">
+          <div class="col-sm"> 
       <article class="articleBorder">
         <img src="./images/zebras.PNG" class="home" />
         <p class="texttop">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo corporis libero est id! Ex ducimus nam hic quae, distinctio modi unde dolor repellendus nobis quaerat blanditiis mollitia accusamus voluptatibus vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi omnis quis numquam laboriosam suscipit nesciunt obcaecati eos, ipsam alias eaque cum sed earum a? Exercitationem voluptatum ut numquam dolorem excepturi?</p>
@@ -67,7 +47,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo corporis libero est id! Ex ducimus nam hic quae, distinctio modi unde dolor repellendus nobis quaerat blanditiis mollitia accusamus voluptatibus vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi omnis quis numquam laboriosam suscipit nesciunt obcaecati eos, ipsam alias eaque cum sed earum a? Exercitationem voluptatum ut numquam dolorem excepturi?</p>
       </article>
 </section>
-<!-- </div> -->
+    </div>
+  </div>
+</div>
 <!-- </div> -->
 </body>
 </html>
